<resources>
    <string name="app_name">Betadata</string>
    <string name="location_disabled">Location needed to move map to rocks near you.</string>
    <string name="add_route">Add Route</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="normal_map">Normal Map</string>
    <string name="add_route_header"><u>Select Category</u></string>
    <string name="cancel">Cancel</string>
    <string name="place">Place</string>
    <string name="bouldering">Boulder</string>
    <string name="sport">Sport</string>
    <string name="sport_climbing">Sport Climbing</string>
    <string name="trad">Trad</string>
    <string name="trad_climbing">Trad Climbing</string>
    <string name="alpine">Alpine</string>
    <string name="alpine_climbing">Alpine Climbing</string>
    <string name="load_map_before_adding_route">Map must be loaded before adding a new route.</string>
    <string name="no_route_selected">Please select closest description.</string>
    <string name="please_zoom_in">Not accurate enough.\nZoom in to be more accurate.</string>
    <string name="add_route_activity_title">Add %s Route</string>
    <string name="what_is_route_name">What is the route name?</string>
    <string name="submit">Submit</string>
    <string name="add_at_least_one_image"><u>Route Photos</u></string>
    <string name="route_name">Route Name</string>
    <string name="locating_information">Locating Tips</string>
    <string name="how_do_you_get_to_this_route">How do you get to this route?</string>
    <string name="latitude_and_longitude">Latitude:%s   Longitude:%s</string>
    <string name="how_difficult_is_this_route">How difficult is this route?</string>
    <string name="base_difficulty">Beta Scale: ?/100</string>
    <string name="difficulty">Beta Scale: %s/100</string>
    <string name="height_ft">Height (ft)</string>
    <string name="base_grade">Grade: ?</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome !</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>
    <string name="name">Name: %s</string>
    <string name="grade">Grade: %s</string>
    <string name="more_info">More Info</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="comments">Comments</string>

</resources>