<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/add_route_header"/>

        <RadioGroup
            android:id="@+id/rg_dialog_routes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbtn_dialog_location_bouldering"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bouldering"/>

            <RadioButton
                android:id="@+id/rbtn_dialog_location_sport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sport_climbing"/>

            <RadioButton
                android:id="@+id/rbtn_dialog_location_trad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trad_climbing"/>

            <RadioButton
                android:id="@+id/rbtn_dialog_location_alpine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alpine_climbing"/>

        </RadioGroup>

        <Button
            android:id="@+id/btn_dialog_location_go"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/place"
            android:layout_weight="1"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>